--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,46 @@
 
 /*Utilities*/
 
+.container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+/*Typography*/
+
+ul {
+  list-style: none;
+}
 
 
 /*Header*/
 
 header {
   background-color: #f8f9fa;
+  padding: 1rem;
+}
+
+/*Main*/
+
+main {
+
+  .navbar {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 2rem;
+
+    button {
+      background-color: #0d6efd;
+      color: white;
+      padding: 0.8rem 1rem;
+      border: 1px solid blue;
+      border-radius: 15px;
+
+      &:hover {
+        background-color: #ffc107;
+        color: black;
+        border: 1px solid #ffc109;
+      }
+    }
+  }
 }
