--- a/src/index.css
+++ b/src/index.css
@@ -36,9 +36,16 @@ main {
     justify-content: space-evenly;
     padding: 2rem;
 
+    button.active {
+      background-color: #ffc107;
+      color: black;
+      border: 1px solid #ffc109;
+    }
+
     button {
       background-color: #0d6efd;
       color: white;
+      font-size: 1.3rem;
       padding: 0.8rem 1rem;
       border: 1px solid blue;
       border-radius: 15px;
@@ -48,6 +55,8 @@ main {
         color: black;
         border: 1px solid #ffc109;
       }
+
     }
+
   }
 }
